--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config src/index.js"
+    "dev": "nodemon -r dotenv/config src/index.js",
+     "start": "mkdir -p public/temp && node index.js"
   },
   "keywords": [
     "javascript",
