--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,10 +4,10 @@
   "description": "a backend project",
   "type": "module",
   "main": "index.js",
- "scripts": {
-  "dev": "mkdir -p public/temp && nodemon -r dotenv/config src/index.js",
-  "start": "mkdir -p public/temp && node index.js"
-},
+  "scripts": {
+    "dev": "mkdir -p public/temp && nodemon -r dotenv/config src/index.js",
+    "start": "mkdir -p public/temp && node index.js"
+  },
   "keywords": [
     "javascript",
     "and",
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mkdirp": "^3.0.1",
     "mongodb": "^6.13.0",
     "mongoose": "^8.8.3",
     "mongoose-aggregate-paginate-v2": "^1.1.2",
