--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "mkdir -p public/temp && nodemon -r dotenv/config src/index.js",
-    "start": "mkdir -p public/temp && node index.js"
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
   "keywords": [
     "javascript",
