--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,8 @@
   "description": "a backend project",
   "type": "module",
   "main": "index.js",
-  "scripts": {
-    "dev": "mkdir -p public/temp && nodemon -r dotenv/config src/index.js",
-    "start": "mkdir -p public/temp && node index.js"
+ "scripts": {
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
   "keywords": [
     "javascript",
